# src/v1/models/dto/request/auth/SignOutRequest.ts
@@ -1,0 +1,7 @@
+
+import {IsNotEmptyString} from "../../../../utils/validation/IsNotEmptyString";
+
+export class SignOutRequest {    
+    @IsNotEmptyString()
+    token: string;    
+}
