# src/v1/routers/AuthRouter.ts
@@ -11,6 +11,7 @@ import { ConfirmResetPasswordRequest } from "../models/dto/request/auth/ConfirmR
 import { VerifyEmailRequest } from "../models/dto/request/auth/VerifyEmailRequest";
 import { ChangePasswordRequest } from "../models/dto/request/auth/ChangePasswordRequest";
 import { RefreshTokenRequest } from "../models/dto/request/auth/RefreshTokenRequest";
+import { SignOutRequest } from "../models/dto/request/auth/SignOutRequest";
 
 export class AuthRouter extends CommonRoutesConfig {
   constructor(app: express.Application) {
@@ -18,7 +19,7 @@ export class AuthRouter extends CommonRoutesConfig {
   }
 
   configureRoutes() {
-    const controller = Container.get(AuthController);    
+    const controller = Container.get(AuthController);
 
     this.router.all(
       ``,
@@ -33,12 +34,45 @@ export class AuthRouter extends CommonRoutesConfig {
         next();
       }
     );
-    this.router.post(`/signUp`, ValidationMiddleware(SignUpRequest), controller.signUp.bind(controller));
-    this.router.post(`/signIn`, ValidationMiddleware(SignInRequest),controller.signIn.bind(controller));    
-    this.router.post(`/resetPassword`, ValidationMiddleware(ResetPasswordRequest),controller.resetPassword.bind(controller));    
-    this.router.post(`/confirmResetPassword`, ValidationMiddleware(ConfirmResetPasswordRequest),controller.confirmResetPassword.bind(controller));   
-    this.router.post(`/changePassword`, ValidationMiddleware(ChangePasswordRequest),controller.changePassword.bind(controller));    
-    this.router.post(`/verifyEmail`, ValidationMiddleware(VerifyEmailRequest), controller.verifyEmail.bind(controller));    
-    this.router.post(`/refreshToken`, ValidationMiddleware(RefreshTokenRequest),controller.refreshToken.bind(controller));    
+    this.router.post(
+      `/signUp`,
+      ValidationMiddleware(SignUpRequest),
+      controller.signUp.bind(controller)
+    );
+    this.router.post(
+      `/signIn`,
+      ValidationMiddleware(SignInRequest),
+      controller.signIn.bind(controller)
+    );
+    this.router.post(
+      `/signOut`,
+      ValidationMiddleware(SignOutRequest),
+      controller.signOut.bind(controller)
+    );
+    this.router.post(
+      `/resetPassword`,
+      ValidationMiddleware(ResetPasswordRequest),
+      controller.resetPassword.bind(controller)
+    );
+    this.router.post(
+      `/confirmResetPassword`,
+      ValidationMiddleware(ConfirmResetPasswordRequest),
+      controller.confirmResetPassword.bind(controller)
+    );
+    this.router.post(
+      `/changePassword`,
+      ValidationMiddleware(ChangePasswordRequest),
+      controller.changePassword.bind(controller)
+    );
+    this.router.post(
+      `/verifyEmail`,
+      ValidationMiddleware(VerifyEmailRequest),
+      controller.verifyEmail.bind(controller)
+    );
+    this.router.post(
+      `/refreshToken`,
+      ValidationMiddleware(RefreshTokenRequest),
+      controller.refreshToken.bind(controller)
+    );
   }
 }
